--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "replace-activities-text",
+  "version": "1.0.0",
+  "description": "gnome-shell-extension",
+  "main": "extension.js",
+  "author": "PRATAP PANABAKA",
   "devDependencies": {
-    "eslint-plugin-jsdoc": "^43.1.1"
+    "eslint-plugin-jsdoc": "^46.5.0"
   }
 }
